replace Set/List/Map .of() method by Java 8 compatible