@@ -6,6 +6,7 @@ package io.clientcore.core.util.union;
 import io.clientcore.core.implementation.GenericParameterizedType;
 import io.clientcore.core.util.Union;
 
+import java.util.Arrays;
 import java.util.List;
 
 // This is an example of a Model class that uses the Union type to allow for multiple types to be stored in a single
@@ -41,17 +42,17 @@ public class GenericModelType {
 
     public static void main(String[] args) {
         GenericModelType model = new GenericModelType();
-        model.setPropAsStrings(List.of("Hello", "World"));
+        model.setPropAsStrings(Arrays.asList("Hello", "World"));
 
         // in this case, it isn't possible to switch over the values easily (as we could in the ModelType class), as the
         // types are all List types (and we would need to inspect the values inside the list to be sure). Instead, we
         // can use the tryConsume method to consume the value if it is of the expected type.
         model.getProp().tryConsume(strings -> System.out.println("Strings: " + strings), List.class, String.class);
 
-        model.setPropAsIntegers(List.of(1, 2, 3));
+        model.setPropAsIntegers(Arrays.asList(1, 2, 3));
         model.getProp().tryConsume(integers -> System.out.println("Integers: " + integers), List.class, Integer.class);
 
-        model.setPropAsFloats(List.of(1.0f, 2.0f, 3.0f));
+        model.setPropAsFloats(Arrays.asList(1.0f, 2.0f, 3.0f));
         model.getProp().tryConsume(floats -> System.out.println("Floats: " + floats), List.class, Float.class);
     }
 }
